fix menu on mobile revert

--- a/src/style/my_media.scss
+++ b/src/style/my_media.scss
@@ -1278,6 +1278,16 @@
    }
 
 }
+@media (max-width: 750px) and (max-height: 400px) {
+    .top-menu {
+        ul.top-menu_visible {
+            li{
+                width: 30% !important;
+                float: left;
+            }
+        }
+    }
+}
 @media (max-width: 540px){
     .form-row:not(.mobile-flex), .brand-detail, .prod-block:not(.--widthProduct), .m-delivery-grid{
         display: block;
